--- a/docs/gettingstarted/quickoverview.ipynb
+++ b/docs/gettingstarted/quickoverview.ipynb
@@ -295,12 +295,12 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4837712000\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4837712000\">\n",
+       "                        <input id=\"group-ds--7973725500\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--7973725500\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.2</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__<a href=\"https://w3id.org/okn/o/sd#SoftwareVersion\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a> : 1.0.2</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -837,20 +837,20 @@
        "  * time     (time) float64 0.0 0.03927 0.07854 0.1178 ... 0.7069 0.7461 0.7854\n",
        "Attributes:\n",
        "    long_name:  air velocity in pipe\n",
-       "    units:      m/s</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'vel'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>time</span>: 21</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-0dae3337-51f0-4351-9857-5677fff40113' class='xr-array-in' type='checkbox' ><label for='section-0dae3337-51f0-4351-9857-5677fff40113' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0 0.6745 0.9959 0.7962 0.1797 ... 0.01737 0.6872 0.9973 0.7855</span></div><div class='xr-array-data'><pre>array([ 0.        ,  0.6744506 ,  0.9959207 ,  0.7961657 ,  0.17972937,\n",
+       "    units:      m/s</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'vel'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>time</span>: 21</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-782184a4-c0d4-4697-ad63-45292b40f869' class='xr-array-in' type='checkbox' ><label for='section-782184a4-c0d4-4697-ad63-45292b40f869' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0 0.6745 0.9959 0.7962 0.1797 ... 0.01737 0.6872 0.9973 0.7855</span></div><div class='xr-array-data'><pre>array([ 0.        ,  0.6744506 ,  0.9959207 ,  0.7961657 ,  0.17972937,\n",
        "       -0.53077013, -0.96348575, -0.89195141, -0.35360535,  0.36980363,\n",
        "        0.89967217,  0.95868823,  0.51596517, -0.19679344, -0.80655823,\n",
        "       -0.99420266, -0.66152114,  0.01737412,  0.68717646,  0.99733809,\n",
-       "        0.78553281])</pre></div></div></li><li class='xr-section-item'><input id='section-469e26b6-b92e-49a0-946d-8a5c87a23cbc' class='xr-section-summary-in' type='checkbox'  checked><label for='section-469e26b6-b92e-49a0-946d-8a5c87a23cbc' class='xr-section-summary' >Coordinates: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>time</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>0.0 0.03927 ... 0.7461 0.7854</div><input id='attrs-c0dda77d-7d9b-43e0-ab90-a3a2efa52bb5' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-c0dda77d-7d9b-43e0-ab90-a3a2efa52bb5' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-f0e94b90-4b8a-4269-bef1-62cd427e65fa' class='xr-var-data-in' type='checkbox'><label for='data-f0e94b90-4b8a-4269-bef1-62cd427e65fa' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>measurement time</dd><dt><span>units :</span></dt><dd>s</dd></dl></div><div class='xr-var-data'><pre>array([0.      , 0.03927 , 0.07854 , 0.11781 , 0.15708 , 0.19635 , 0.235619,\n",
+       "        0.78553281])</pre></div></div></li><li class='xr-section-item'><input id='section-05418d41-4024-4b7e-9144-037e17947cd9' class='xr-section-summary-in' type='checkbox'  checked><label for='section-05418d41-4024-4b7e-9144-037e17947cd9' class='xr-section-summary' >Coordinates: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>time</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>0.0 0.03927 ... 0.7461 0.7854</div><input id='attrs-78b1c2da-82bd-4f68-bfce-d7e44bd9ad25' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-78b1c2da-82bd-4f68-bfce-d7e44bd9ad25' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-164e59fb-189d-4cf7-a769-7322d8137651' class='xr-var-data-in' type='checkbox'><label for='data-164e59fb-189d-4cf7-a769-7322d8137651' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>measurement time</dd><dt><span>units :</span></dt><dd>s</dd></dl></div><div class='xr-var-data'><pre>array([0.      , 0.03927 , 0.07854 , 0.11781 , 0.15708 , 0.19635 , 0.235619,\n",
        "       0.274889, 0.314159, 0.353429, 0.392699, 0.431969, 0.471239, 0.510509,\n",
-       "       0.549779, 0.589049, 0.628319, 0.667588, 0.706858, 0.746128, 0.785398])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-82d01bb2-e656-4c91-be31-399c3b5e6bf3' class='xr-section-summary-in' type='checkbox'  ><label for='section-82d01bb2-e656-4c91-be31-399c3b5e6bf3' class='xr-section-summary' >Indexes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>time</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-4a181545-50be-43ce-a2c1-a369f617818e' class='xr-index-data-in' type='checkbox'/><label for='index-4a181545-50be-43ce-a2c1-a369f617818e' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([                 0.0, 0.039269908169872414,  0.07853981633974483,\n",
+       "       0.549779, 0.589049, 0.628319, 0.667588, 0.706858, 0.746128, 0.785398])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-c0c509a1-d141-4914-be75-51a2d5d7669f' class='xr-section-summary-in' type='checkbox'  ><label for='section-c0c509a1-d141-4914-be75-51a2d5d7669f' class='xr-section-summary' >Indexes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>time</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-3f5e242f-930e-4fe5-bc95-8dcc75f54258' class='xr-index-data-in' type='checkbox'/><label for='index-3f5e242f-930e-4fe5-bc95-8dcc75f54258' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([                 0.0, 0.039269908169872414,  0.07853981633974483,\n",
        "        0.11780972450961724,  0.15707963267948966,  0.19634954084936207,\n",
        "        0.23561944901923448,   0.2748893571891069,   0.3141592653589793,\n",
        "         0.3534291735288517,  0.39269908169872414,  0.43196898986859655,\n",
        "        0.47123889803846897,   0.5105088062083414,   0.5497787143782138,\n",
        "         0.5890486225480862,   0.6283185307179586,    0.667588438887831,\n",
        "         0.7068583470577035,   0.7461282552275759,   0.7853981633974483],\n",
-       "      dtype=&#x27;float64&#x27;, name=&#x27;time&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-a9e58fc2-cc0c-4f5e-81c2-0f88cb9bb969' class='xr-section-summary-in' type='checkbox'  checked><label for='section-a9e58fc2-cc0c-4f5e-81c2-0f88cb9bb969' class='xr-section-summary' >Attributes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>air velocity in pipe</dd><dt><span>units :</span></dt><dd>m/s</dd></dl></div></li></ul></div></div>"
+       "      dtype=&#x27;float64&#x27;, name=&#x27;time&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-523b88d2-aca2-4ef9-bbcc-6a43a0d08245' class='xr-section-summary-in' type='checkbox'  checked><label for='section-523b88d2-aca2-4ef9-bbcc-6a43a0d08245' class='xr-section-summary' >Attributes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>air velocity in pipe</dd><dt><span>units :</span></dt><dd>m/s</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'vel' (time: 21)>\n",
@@ -1155,25 +1155,25 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--7805452200\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--7805452200\">\n",
+       "                        <input id=\"group-ds--13083572400\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--13083572400\">\n",
        "                        /<span>(2)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.2</li><li style=\"list-style-type: none; font-style: italic\">contact : <a href=\"https://orcid.org/0000-0001-8729-0482\"><img alt=\"ORCID logo\" src=\"https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png\" width=\"16\" height=\"16\" />https://orcid.org/0000-0001-8729-0482</a></li><li style=\"list-style-type: none; font-style: italic\">data_type : experimental</li><li style=\"list-style-type: none; font-style: italic\">standard_name_table : <a href=\"https://zenodo.org/record/10428795\"><img src=\"https://zenodo.org/badge/DOI/10.5281/zenodo.10428795.svg\" alt=\"DOI\"></a></li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__<a href=\"https://w3id.org/okn/o/sd#SoftwareVersion\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a> : 1.0.2</li><li style=\"list-style-type: none; font-style: italic\">contact : <a href=\"https://orcid.org/0000-0001-8729-0482\"><img alt=\"ORCID logo\" src=\"https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png\" width=\"16\" height=\"16\" />https://orcid.org/0000-0001-8729-0482</a></li><li style=\"list-style-type: none; font-style: italic\">data_type : experimental</li><li style=\"list-style-type: none; font-style: italic\">standard_name_table : <a href=\"https://zenodo.org/record/10428795\"><img src=\"https://zenodo.org/badge/DOI/10.5281/zenodo.10428795.svg\" alt=\"DOI\"></a></li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/time-7807852200\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/time-7807857400\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/time-7807857400\">time</label>\n",
+       "                <ul id=\"ds-1-/time-13085130200\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/time-13085132600\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/time-13085132600\">time</label>\n",
        "                    <span class=\"h5tb-dims\">(21) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : measurement time</li><li style=\"list-style-type: none; font-style: italic\">units : s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/vel-7808814400\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/vel-7808819800\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/vel-7808819800\">vel</label>\n",
+       "                <ul id=\"ds-1-/vel-13085515300\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/vel-13085517500\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/vel-13085517500\">vel</label>\n",
        "                    <span class=\"h5tb-dims\">(time: 21) [float64]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : air velocity in pipe</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
@@ -1286,8 +1286,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<LDataset \"/vel\" in \"C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_1\\tmp3.hdf\" attrs=(long_name=air velocity in pipe, units=m/s)>\n",
-      "<LDataset \"/time\" in \"C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_1\\tmp3.hdf\" attrs=(units=s, long_name=measurement time)>\n"
+      "<LDataset \"/time\" in \"C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_0\\tmp3.hdf\" attrs=(long_name=measurement time, units=s)>\n",
+      "<LDataset \"/vel\" in \"C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_0\\tmp3.hdf\" attrs=(units=m/s, long_name=air velocity in pipe)>\n"
      ]
     }
    ],
@@ -1442,7 +1442,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-02_10:14:15,929 ERROR    [core.py:130] Applying spec. \"LayoutSpecification (kwargs={'flt': {'$name': {'$regex': 'pressure'}, '$shape': (21,), 'units': 'Pa'}, 'objfilter': 'dataset'})\" on \"C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_1\\tmp3.hdf\" failed.\n"
+      "2024-01-02_15:20:04,170 ERROR    [core.py:130] Applying spec. \"LayoutSpecification (kwargs={'flt': {'$name': {'$regex': 'pressure'}, '$shape': (21,), 'units': 'Pa'}, 'objfilter': 'dataset'})\" on \"C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_0\\tmp3.hdf\" failed.\n"
      ]
     },
     {
@@ -1643,7 +1643,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://sandbox.zenodo.org/deposit/18193'"
+       "'https://sandbox.zenodo.org/deposit/18283'"
       ]
      },
      "execution_count": 29,
