--- a/docs/userguide/wrapper/FAIRAttributes.ipynb
+++ b/docs/userguide/wrapper/FAIRAttributes.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "According to [F1 of the *FAIR Principles*](https://www.go-fair.org/fair-principles/f1-meta-data-assigned-globally-unique-persistent-identifiers/) attributes shall be assigned to globally unique and persistent identifiers.\n",
     "\n",
-    "Here's what www.g-fair.org says about it:\n",
+    "Here's what www.go-fair.org says about it:\n",
     "\n",
     "*Globally unique and persistent identifiers remove ambiguity in the meaning of your published data by assigning a unique identifier to every element of metadata and every concept/measurement in your dataset. In this context, identifiers consist of an internet link (e.g., a URL that resolves to a web page that defines the concept such as a particular human protein). Many data repositories will automatically generate globally unique and persistent identifiers to deposited datasets. Identifiers can help other people understand exactly what you mean, and they allow computers to interpret your data in a meaningful way (i.e., computers that are searching for your data or trying to automatically integrate them). Identifiers are essential to the human-machine interoperation that is key to the vision of Open Science. In addition, identifiers will help others to properly cite your work when reusing your data.*\n",
     "\n",
@@ -31,9 +31,9 @@
     "Then, we can \"explain\" the data in the following way:\n",
     "- The *group \"contact\"* <u>is</u> **Person**\n",
     "- The *group \"contact\"* <u>has ORCiD</u> **\\<value\\>**\n",
-    "- The *dataset \"u\"* <u>hasUnit/u> **\"m/s\"**\n",
+    "- The *dataset \"u\"* <u>hasUnit</u> **\"m/s\"**\n",
     "- *\"m/s\"* <u>is</u> **\"https://qudt.org/vocab/unit/M-PER-SEC\"**\n",
-    "- The *dataset \"u\"* <u>has kind of quantity/u> **Velocity** (defined by qudt)\n",
+    "- The *dataset \"u\"* <u>has kind of quantity</u> **Velocity** (defined by qudt)\n",
     "- etc.\n",
     "\n",
     "Let's build such a file:"
@@ -54,7 +54,7 @@
    "id": "23f59915-a00a-4f30-b7d0-37f1b58aa6b5",
    "metadata": {},
    "source": [
-    "## Attribute-IRI-Association\n",
+    "## Associate IRI to attributes\n",
     "\n",
     "An IRI can be assigned during or after attribute creation. Various possibilities are shown below.\n",
     "\n",
