bugfix colab and FAIRAttributes notebook

--- a/docs/userguide/wrapper/FAIRAttributes.ipynb
+++ b/docs/userguide/wrapper/FAIRAttributes.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Here's what www.go-fair.org says about it:\n",
     "\n",
-    "*Globally unique and persistent identifiers remove ambiguity in the meaning of your published data by assigning a unique identifier to every element of metadata and every concept/measurement in your dataset. In this context, identifiers consist of an internet link (e.g., a URL that resolves to a web page that defines the concept such as a particular human protein). Many data repositories will automatically generate globally unique and persistent identifiers to deposited datasets. Identifiers can help other people understand exactly what you mean, and they allow computers to interpret your data in a meaningful way (i.e., computers that are searching for your data or trying to automatically integrate them). Identifiers are essential to the human-machine interoperation that is key to the vision of Open Science. In addition, identifiers will help others to properly cite your work when reusing your data.*\n",
+    "*\"Globally unique and persistent identifiers remove ambiguity in the meaning of your published data by assigning a unique identifier to every element of metadata and every concept/measurement in your dataset. In this context, identifiers consist of an internet link (e.g., a URL that resolves to a web page that defines the concept such as a particular human protein). Many data repositories will automatically generate globally unique and persistent identifiers to deposited datasets. Identifiers can help other people understand exactly what you mean, and they allow computers to interpret your data in a meaningful way (i.e., computers that are searching for your data or trying to automatically integrate them). Identifiers are essential to the human-machine interoperation that is key to the vision of Open Science. In addition, identifiers will help others to properly cite your work when reusing your data.\"*\n",
     "\n",
     "The *h5rdmtoolbox* allows assigning attributes (and their data) to identifiers. For this, each name and value of an attribute may obtain an IRI (internationalized resource identifier). The following outlines, how it is done."
    ]
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "23a5fa94-ace5-430d-ab79-185fa801f419",
    "metadata": {},
    "outputs": [],
@@ -63,18 +63,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "4c716528-4752-402d-b922-d2750f04eeed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from h5rdmtoolbox.namespace import M4I, OBO, QUDT_UNIT, HAS_QKIND\n",
+    "from h5rdmtoolbox.namespace import M4I, OBO, QUDT_UNIT, QUDT_QUANTITYKIND\n",
     "from rdflib.namespace import FOAF"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "7eb3012a-4aef-4f0d-8ddb-69579341aa58",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
     "    ds.attrs.create('quantity_kind',\n",
     "                     data='velocity',\n",
     "                     predicate=M4I.hasKindOfQuantity,\n",
-    "                     object=HAS_QKIND.Velocity)\n",
+    "                     object=QUDT_QUANTITYKIND.Velocity)\n",
     "\n",
     "    proc = h5.create_group('proc_random_number')\n",
     "    proc.iri = M4I.ProcessingStep\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "18cb9b55-768b-4331-a42f-89bad556abed",
    "metadata": {},
    "outputs": [
@@ -338,26 +338,26 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--399052659000\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--399052659000\">\n",
+       "                        <input id=\"group-ds--7188493900\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--7188493900\">\n",
        "                        /<span>(3)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__<a href=\"https://w3id.org/okn/o/sd#SoftwareVersion\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a> : 1.0.2</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__<a href=\"https://w3id.org/okn/o/sd#SoftwareVersion\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a> : 1.2.0</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/random_velocity-399053863700\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/random_velocity-399053866300\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/random_velocity-399053866300\">random_velocity</label>\n",
+       "                <ul id=\"ds-1-/random_velocity-7192756700\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/random_velocity-7192762500\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/random_velocity-7192762500\">random_velocity</label>\n",
        "                    <span class=\"h5tb-dims\">(100) [float64]</span>\n",
-       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">quantity_kind<a href=\"http://w3id.org/nfdi4ing/metadata4ing#hasKindOfQuantity\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a> : velocity<a href=\"https://qudt.org/vocab/quantitykind/Velocity\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a></li><li style=\"list-style-type: none; font-style: italic\">units<a href=\"http://w3id.org/nfdi4ing/metadata4ing#hasUnit\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a> : m/s<a href=\"https://qudt.org/vocab/unit/M-PER-SEC\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a></li>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">quantity_kind<a href=\"http://w3id.org/nfdi4ing/metadata4ing#hasKindOfQuantity\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a> : velocity<a href=\"http://qudt.org/vocab/quantitykind/Velocity\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a></li><li style=\"list-style-type: none; font-style: italic\">units<a href=\"http://w3id.org/nfdi4ing/metadata4ing#hasUnit\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a> : m/s<a href=\"http://qudt.org/vocab/unit/M-PER-SEC\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a></li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds-contact-399054452400\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-contact-399054452400\">\n",
+       "                        <input id=\"group-ds-contact-7193892200\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-contact-7193892200\">\n",
        "                        contact<a href=\"http://xmlns.com/foaf/0.1/Person\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a><span>(0)</span></label>\n",
        "                  \n",
        "\n",
@@ -368,12 +368,12 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds-proc_random_number-399054962100\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-proc_random_number-399054962100\">\n",
+       "                        <input id=\"group-ds-proc_random_number-7194331900\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-proc_random_number-7194331900\">\n",
        "                        proc_random_number<a href=\"http://w3id.org/nfdi4ing/metadata4ing#ProcessingStep\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a><span>(0)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">end_time<a href=\"https://schema.org/startTime\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a> : 2024-01-02T14:55:06.606302</li><li style=\"list-style-type: none; font-style: italic\">has_participants<a href=\"http://purl.obolibrary.org/obo/RO_0000057\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a> : /contact</li><li style=\"list-style-type: none; font-style: italic\">output<a href=\"http://purl.obolibrary.org/obo/RO_0002234\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a> : /random_velocity</li><li style=\"list-style-type: none; font-style: italic\">start_time<a href=\"https://schema.org/startTime\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a> : 2024-01-02T14:55:04.600987</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">end_time<a href=\"https://schema.org/startTime\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a> : 2024-01-04T08:48:01.384931</li><li style=\"list-style-type: none; font-style: italic\">has_participants<a href=\"http://purl.obolibrary.org/obo/RO_0000057\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a> : /contact</li><li style=\"list-style-type: none; font-style: italic\">output<a href=\"http://purl.obolibrary.org/obo/RO_0002234\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a> : /random_velocity</li><li style=\"list-style-type: none; font-style: italic\">start_time<a href=\"https://schema.org/startTime\"><img src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\" [IRI]\" width=\"16\" height=\"16\" /></a> : 2024-01-04T08:47:59.377642</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "7b58e520-046d-4f5d-b1ab-c21f691ae992",
    "metadata": {},
    "outputs": [],
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "ec944a41-6988-4c1a-9caf-da12eb4856ad",
    "metadata": {},
    "outputs": [
@@ -424,26 +424,26 @@
       "{\n",
       "  \"@graph\": [\n",
       "    {\n",
-      "      \"@id\": \"file://./tmp2/\",\n",
-      "      \"https://w3id.org/okn/o/sd#SoftwareVersion\": \"1.0.2\"\n",
+      "      \"@id\": \"file://./tmp0/\",\n",
+      "      \"https://w3id.org/okn/o/sd#SoftwareVersion\": \"1.2.0\"\n",
       "    },\n",
       "    {\n",
-      "      \"@id\": \"file://./tmp2/contact\",\n",
+      "      \"@id\": \"file://./tmp0/contact\",\n",
       "      \"@type\": \"http://xmlns.com/foaf/0.1/Person\",\n",
       "      \"http://xmlns.com/foaf/0.1/firstName\": \"Matthias\",\n",
       "      \"http://w3id.org/nfdi4ing/metadata4ing#orcidId\": \"https://orcid.org/0000-0001-8729-0482\"\n",
       "    },\n",
       "    {\n",
-      "      \"@id\": \"file://./tmp2/proc_random_number\",\n",
+      "      \"@id\": \"file://./tmp0/proc_random_number\",\n",
       "      \"@type\": \"http://w3id.org/nfdi4ing/metadata4ing#ProcessingStep\",\n",
-      "      \"https://schema.org/startTime\": \"2024-01-02T14:55:04.600987\",\n",
-      "      \"http://purl.obolibrary.org/obo/RO_0000057\": \"file://./tmp2/contact\",\n",
-      "      \"http://purl.obolibrary.org/obo/RO_0002234\": \"file://./tmp2/random_velocity\"\n",
+      "      \"https://schema.org/startTime\": \"2024-01-04T08:47:59.377642\",\n",
+      "      \"http://purl.obolibrary.org/obo/RO_0000057\": \"file://./tmp0/contact\",\n",
+      "      \"http://purl.obolibrary.org/obo/RO_0002234\": \"file://./tmp0/random_velocity\"\n",
       "    },\n",
       "    {\n",
-      "      \"@id\": \"file://./tmp2/random_velocity\",\n",
-      "      \"http://w3id.org/nfdi4ing/metadata4ing#hasKindOfQuantity\": \"https://qudt.org/vocab/quantitykind/Velocity\",\n",
-      "      \"http://w3id.org/nfdi4ing/metadata4ing#hasUnit\": \"https://qudt.org/vocab/unit/M-PER-SEC\"\n",
+      "      \"@id\": \"file://./tmp0/random_velocity\",\n",
+      "      \"http://w3id.org/nfdi4ing/metadata4ing#hasKindOfQuantity\": \"http://qudt.org/vocab/quantitykind/Velocity\",\n",
+      "      \"http://w3id.org/nfdi4ing/metadata4ing#hasUnit\": \"http://qudt.org/vocab/unit/M-PER-SEC\"\n",
       "    }\n",
       "  ]\n",
       "}\n"
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "77a35de3-b332-4e4f-b52d-324e9f02465c",
    "metadata": {},
    "outputs": [],
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "id": "36af4e53-a34b-4140-9e26-7205183b776e",
    "metadata": {},
    "outputs": [
@@ -488,7 +488,7 @@
        "rdflib.term.URIRef('http://xmlns.com/foaf/0.1/Person')"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "id": "ac5daa0d-c51b-4331-b53b-db916005fc2a",
    "metadata": {},
    "outputs": [
@@ -509,7 +509,7 @@
        "{'predicate': 'http://w3id.org/nfdi4ing/metadata4ing#orcidId', 'object': None}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
